--- a/Views/Blog/BlogDetail.cshtml
+++ b/Views/Blog/BlogDetail.cshtml
@@ -120,7 +120,7 @@
                         <div class="blogpost-content" style="word-break:break-word">
                             <header>
                                 <div class="submitted">
-                                    <i class="fa fa-user pr-5"></i> by <a itemprop="author" href="~/Portal/Blog/Author/@Model.MyBlog.AuthorId-@Model.MyBlog.AuthorName">@Model.MyBlog.AuthorName</a>
+                                    <i class="fa fa-user pr-5"></i> by <a itemprop="author" href="/Blog/Author/@Model.MyBlog.AuthorId-@Model.MyBlog.AuthorName">@Model.MyBlog.AuthorName</a>
                                     <a style="
     color: black;
     margin-left: 16px;
