--- a/Views/Blog/index.cshtml
+++ b/Views/Blog/index.cshtml
@@ -40,14 +40,16 @@
 <section class="main-container">
     <div class="container">
         <div class="row">
-            <div class="main col-md-12" >
-                <div >
+            <div class="main col-md-12">
+                <h1 class="page-title">Latest Blogs</h1>
+                <div class="separator-2"></div>
+                <div>
                     <div id="lvCandidatestbl" class="masonry-grid row">
-                     <div id="blogslist">
-                         <partial name="_BlogsList" model="Model" />
-                     </div>   
-                     </div>
-                </div>              
+                        <div id="blogslist">
+                            <partial name="_BlogsList" model="Model" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row" style="text-align:center"><div class="container"> <div style="margin:auto auto" id="pagination"></div></div></div>
