--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,86 +4,86 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    @*<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114851264-8"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-            gtag('config', 'UA-114851264-8');
-        </script>*@
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114851264-8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-114851264-8');
+    </script>
     <title>@ViewBag.Title</title>
-    <link href="../plugins/summernote/summernote.min.css" rel="stylesheet" />
+
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.MetaDescription)))
     {
-        <meta name="description" content="@ViewBag.MetaDescription" />
+    <meta name="description" content="@ViewBag.MetaDescription" />
     }
     else
     {
-        <meta name="description" content="Welcome To Code2night, check out lur latest programming blogs with detailed description to help you out" />
+    <meta name="description" content="Welcome To Code2night, check out lur latest programming blogs with detailed description to help you out" />
     }
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.MetaKeywords)))
     {
-        <meta name="keywords" content="@ViewBag.MetaKeywords" />
+    <meta name="keywords" content="@ViewBag.MetaKeywords" />
     }
     else
     {
-        <meta name="keywords" content="Code2Night,Blogs,Stripe,Slick,MVC,Exception Handling,Code,Programming,Tutotials,Slick Slider,IIS,Internet Information Services" />
+    <meta name="keywords" content="Code2Night,Blogs,Stripe,Slick,MVC,Exception Handling,Code,Programming,Tutotials,Slick Slider,IIS,Internet Information Services" />
     }
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.Canonical)))
     {
-        <link rel="canonical" href="@ViewBag.Canonical" />
+    <link rel="canonical" href="@ViewBag.Canonical" />
     }
     else
     {
-        <link rel="canonical" href="https://www.code2night.com/Blog/Index" />
+    <link rel="canonical" href="https://www.code2night.com/Blog/Index" />
     }
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.OpenGraphTitle)))
     {
-        <meta property="og:title" content="@ViewBag.OpenGraphTitle">
+    <meta property="og:title" content="@ViewBag.OpenGraphTitle">
 
     }
     else
     {
-        <meta property="og:title" content="Code2night">
+    <meta property="og:title" content="Code2night">
 
     }
     <meta property="og:site_name" content="Code2night">
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.OpenGraphUrl)))
     {
-        <meta property="og:url" content="@ViewBag.OpenGraphUrl">
+    <meta property="og:url" content="@ViewBag.OpenGraphUrl">
     }
     else
     {
-        <meta property="og:url" content="https://www.code2night.com/">
+    <meta property="og:url" content="https://www.code2night.com/">
     }
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.OpenGraphDescription)))
     {
-        <meta property="og:description" content="@ViewBag.OpenGraphDescription">
+    <meta property="og:description" content="@ViewBag.OpenGraphDescription">
     }
     else
     {
-        <meta property="og:description" content="Welcome To Code2night, A common place for sharing your programming knowledge,Blogs and Videos">
+    <meta property="og:description" content="Welcome To Code2night, A common place for sharing your programming knowledge,Blogs and Videos">
     }
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://www.code2night.com/Content/images/logo_2.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Content/images/favicon.ico">
-    <script src="~/plugins/sweetalert2/sweetalert2.min.js"></script>
-    <link rel="stylesheet"   asp-append-version="true"  href="/css/boootstrap.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/plugins/magnific-popup/magnific-popup.css" />
-    <link rel="stylesheet"  asp-append-version="true" href="/css/animations.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/fonts/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/plugins/owl-carousel/owl.carousel.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/fonts/fontello/css/fontello.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/Tags/bootstrap-tokenfield.css" />
-    <link rel="stylesheet"  asp-append-version="true" href="/css/style.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/css/custom.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/css/animate.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/css/JqueryUI.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/plugins/summernote/summernote.min.css"/>
-    <link rel="stylesheet"  asp-append-version="true" href="/plugins/sweetalert2/sweetalert2.min.css"/>
-    
+    <script asp-append-version="true" src="~/plugins/sweetalert2/sweetalert2.min.js"></script>
+    <link rel="stylesheet" asp-append-version="true" href="/css/boootstrap.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/plugins/magnific-popup/magnific-popup.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/css/animate.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/css/animations.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/fonts/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/plugins/owl-carousel/owl.carousel.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/fonts/fontello/css/fontello.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/Tags/bootstrap-tokenfield.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/css/style.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/css/custom.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/css/JqueryUI.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/plugins/summernote/summernote.min.css" />
+    <link rel="stylesheet" asp-append-version="true" href="/plugins/sweetalert2/sweetalert2.min.css" />
+
     <script asp-append-version="true" src="/plugins/jquery.min.js"></script>
     <script asp-append-version="true" src="/js/summernote.js"></script>
 
@@ -177,16 +177,16 @@
 
 
     @*<environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
-    </environment>
-    <link rel="stylesheet" href="~/css/site.css" />*@
+            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        </environment>
+        <environment exclude="Development">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+                  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+                  crossorigin="anonymous"
+                  integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
+        </environment>
+        <link rel="stylesheet" href="~/css/site.css" />*@
 </head>
 <body>
     <div class="loadersmallbg" style="display: none"></div>
@@ -203,30 +203,18 @@
                     <!-- ================ -->
                     <div class="header-left clearfix">
                         <div class="logo">
-                            @* <h1 id="logo"> Code_ Tonight</h1> *@
-                            <a href="@Url.Action("Portal","Home")"><img id="logo" src="/Content/images/logo_2.png" alt="Code2night"></a>
+                            <a href='@Url.Action("index","Blog")'><img id="logo" src="/Content/images/logo_2.png" title="Code2night" alt="Code2night"></a>
                         </div>
                         <div class="site-slogan">
                         </div>
                     </div>
                 </div>
                 <div class="col-md-9">
-
-                    <!-- header-right start -->
-                    <!-- ================ -->
                     <div class="header-right clearfix">
-
-                        <!-- main-navigation start -->
-                        <!-- ================ -->
                         <div class="main-navigation animated">
-
-                            <!-- navbar start -->
-                            <!-- ================ -->
-                            <nav class="navbar navbar-default" role="navigation">
+                             <nav class="navbar navbar-default" role="navigation">
                                 <div class="container-fluid">
-
-                                    <!-- Toggle get grouped for better mobile display -->
-                                    <div class="navbar-header">
+                                        <div class="navbar-header">
                                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
                                             <span class="sr-only">Toggle navigation</span>
                                             <span class="icon-bar"></span>
@@ -234,19 +222,14 @@
                                             <span class="icon-bar"></span>
                                         </button>
                                     </div>
-
-                                    <!-- Collect the nav links, forms, and other content for toggling -->
                                     <div class="collapse navbar-collapse" id="navbar-collapse-1">
                                         <ul class="nav navbar-nav navbar-right">
                                             <li class="active">
                                                 <a href="@Url.Action("index","Users")">Home</a>
 
                                             </li>
-
-
                                             <li>
                                                 <a href="@Url.Action("Index","Blog")">Blogs </a>
-
                                             </li>
                                             <li>
                                                 @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
@@ -257,14 +240,11 @@
                                                 {
                                                     <a href="/Blog/AddBlog"> Post Blog </a>
                                                 }
-
-
                                             </li>
                                             @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
                                             {
                                                 <li>
                                                     <a href="@Url.Action("Register", "Users")">Register</a>
-
                                                 </li>
                                             }
 
@@ -286,7 +266,6 @@
 
                                             <li>
                                                 <a href="@Url.Action("ContactUs","Users")">Contact Us</a>
-
                                             </li>
                                         </ul>
                                     </div>
@@ -298,7 +277,6 @@
             </div>
         </div>
     </header>
-
     <div class="">
         @RenderBody()
         <footer id="footer">
