--- a/Views/Blog/BlogDetail.cshtml
+++ b/Views/Blog/BlogDetail.cshtml
@@ -94,7 +94,7 @@
 <section class="main-container">
     <div class="container">
         <div class="row">
-            <div class="main col-md-8" itemscope itemtype="http://schema.org/Blog">
+            <div class="main col-md-8" style="overflow-x:hidden" itemscope itemtype="http://schema.org/Blog">
 
                 <h1 class="page-title" itemprop="headline">@Model.MyBlog.Title</h1>
                 <article class="clearfix blogpost full">
@@ -194,25 +194,27 @@
                     </div>
                 }
             </div>
-            <div>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- DETAIL -->
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-2622840091485569"
-                     data-ad-slot="3445995263"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
+           
         </div>
     </div>
 </aside>
 </div>
 </div>
-
+    <div class="col-md-12" style="overflow:hidden">
+        <div>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- DETAIL -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2622840091485569"
+                 data-ad-slot="3445995263"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    </div>
 <script id="dsq-count-scr" src="//codetonight.disqus.com/count.js" async></script>
 <script>
 
