--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,9 +78,9 @@
     <script asp-append-version="true" src="~/layoutTop.js"></script>
 </head>
 <body>
-    @*<amp-auto-ads type="adsense"
+    <amp-auto-ads type="adsense"
                   data-ad-client="ca-pub-2622840091485569">
-    </amp-auto-ads>*@
+    </amp-auto-ads>
     <div class="header-top">
         <div class="container">
             <div class="row">
