--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -236,6 +236,22 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href='@Url.Action("index", "Category")' class="nav-link">
+                                <i class="nav-icon fas fa-sitemap"></i>
+                                <p>
+                                    Category
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href='@Url.Action("Topics", "Category")' class="nav-link">
+                                <i class="nav-icon fas fa-sitemap"></i>
+                                <p>
+                                    Topics
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href='@Url.Action("ApprovedBlogs", "Blog")' class="nav-link">
                                 <i class="nav-icon fas fa-sitemap"></i>
                                 <p>
