--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -202,7 +202,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                        with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a href='@Url.Action("index", "DashboardGraph")' class="nav-link">
                                 <i class="nav-icon fas fa-users"></i>
@@ -248,6 +248,14 @@
                                 <i class="nav-icon fas fa-sitemap"></i>
                                 <p>
                                     Topics
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href='@Url.Action("Articles", "Category")' class="nav-link">
+                                <i class="nav-icon fas fa-sitemap"></i>
+                                <p>
+                                    Articles
                                 </p>
                             </a>
                         </li>
