--- a/Views/Blog/ApprovedBlogs.cshtml
+++ b/Views/Blog/ApprovedBlogs.cshtml
@@ -88,17 +88,17 @@
                            
 
                             <td class="project-actions text-right">
-                                <a class="btn btn-danger btn-sm" href='@Url.Action("Delete", "Blog", new { Blogid = item.Id })'>
+                                <a class="btn btn-danger btn-sm" href='@Url.Action("Delete", "Blog", new { Blogid = item.Id })' onclick="return confirm('Are you sure you want to Delete this blog?')">
                                     <i class="fas fa-trash">
                                     </i>
                                     Delete
                                 </a>
-                                <a class="btn btn-success btn-sm" href='@Url.Action("BlogIsApprovedUpdate", "Blog", new { Blogid = item.Id })'>
+                                <a class="btn btn-success btn-sm" href='@Url.Action("BlogIsApprovedUpdate", "Blog", new { Blogid = item.Id })' onclick="return confirm('Are you sure you want to approved this blog?')">
                                     <i class="fas fa-check">
                                     </i>
                                     Approved
                                 </a>
-                                <a class="btn btn-success btn-sm" href='@Url.Action("ViewBlogToApproved", "Blog", new { Blogid = item.BlogUrl })'>
+                                <a class="btn btn-success btn-sm" href="@Url.Action("ViewBlogToApproved", "Blog", new { Blogid = item.BlogUrl })" onclick="return confirm('Are you sure you want to Delete this blog?')">
                                     <i class="fas fa-street-view">
                                     </i>
                                     View
