--- a/Views/Blog/Listing.cshtml
+++ b/Views/Blog/Listing.cshtml
@@ -88,7 +88,7 @@
                            
 
                             <td class="project-actions text-right">
-                                <a class="btn btn-danger btn-sm" href='@Url.Action("Delete", "Blog", new { Blogid = item.Id })'>
+                                <a class="btn btn-danger btn-sm" href="@Url.Action("Delete", "Blog", new { Blogid = item.Id })" onclick="return confirm('Are you sure you want to Delete this blog?')">
                                     <i class="fas fa-trash">
                                     </i>
                                     Delete
