--- a/Views/Category/Topics.cshtml
+++ b/Views/Category/Topics.cshtml
@@ -5,6 +5,8 @@
 }
 
 <script type="text/javascript" src="/plugins/jquery.min.js"></script>
+<script src="/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="/Scripts/jquery.validate.unobtrusive.min.js"></script>
 <section class="main-container" style="        margin-top: 0px;
         width: 100%
 ">
@@ -15,34 +17,37 @@
                 <h2 class="title">Topics</h2>
                 <hr>
                 <div class="form-horizontal">
-                    @using (Html.BeginForm("SaveTopic", "Category", FormMethod.Post,new { @enctype = "multipart/form-data" }))
+                    @using (Html.BeginForm("SaveTopic", "Category", FormMethod.Post, new { @enctype = "multipart/form-data" }))
                     {
-                    <div class="col-md-12" style="display:flex">
-                        <div class="col-md-4">
-                            <label for="categoryid" class="col-sm-3 control-label">Category<span class="text-danger small">*</span></label>
-                            @Html.DropDownListFor(x => x.TopicDetail.categoryid, new SelectList(Model.GetCategories, "categoryid", "categoryname"), new { @class = "form-control" })
-                        </div>
-                        <div class="col-md-4">
-                            <label for="categoryid" class="col-sm-3 control-label">Title<span class="text-danger small">*</span></label>
-                            @Html.TextBoxFor(x => x.TopicDetail.title, new {@class="form-control" })
-                        </div>
-                        <div class="col-md-4">
-                            <label for="categoryid" class="col-sm-3 control-label">Topic Url<span class="text-danger small">*</span></label>
-                            @Html.TextBoxFor(x => x.TopicDetail.topicurl, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group has-feedback" style="display:flex">
-
-                        <div class="col-md-8 col-sm-12">
-                            <label for="inputName" class="col-sm-3 control-label">Image<span class="text-danger small">*</span></label>
-                            <div class="col-sm-12 col-md-12">
-                                <input type="file" name="documents" />
+                        <div class="col-md-12" style="display:flex">
+                            <div class="col-md-4">
+                                <label for="categoryid" class="col-sm-3 control-label">Category<span class="text-danger small">*</span></label>
+                                @Html.DropDownListFor(x => x.TopicDetail.categoryid, new SelectList(Model.GetCategories, "categoryid", "categoryname"), new { @Value = @Model.TopicDetail.categoryid, @required = "required", @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.TopicDetail.categoryid)
+                            </div>
+                            <div class="col-md-4">
+                                <label for="categoryid" class="col-sm-3 control-label">Title<span class="text-danger small">*</span></label>
+                                @Html.TextBoxFor(x => x.TopicDetail.title, new { @Value = @Model.TopicDetail.title, @required = "required", @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.TopicDetail.title)
+                            </div>
+                            <div class="col-md-4">
+                                <label for="categoryid" class="col-sm-3 control-label">Topic Url<span class="text-danger small">*</span></label>
+                                @Html.TextBoxFor(x => x.TopicDetail.topicurl, new { @Value = @Model.TopicDetail.topicurl, @required = "required", @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.TopicDetail.topicurl)
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-12">
-                            <div class="col-md-12 col-sm-12"> <input type="submit" style="margin-top:31px;" name="buttonsubmit" id="InsertCategory" onclick="InsertCategory()" class="btn btn-primary" value="Save"></div>
+                        <div class="form-group has-feedback" style="display:flex">
+
+                            <div class="col-md-8 col-sm-12">
+                                <label for="inputName" class="col-sm-3 control-label">Image<span class="text-danger small">*</span></label>
+                                <div class="col-sm-12 col-md-12">
+                                    <input type="file" name="documents" />
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-12">
+                                <div class="col-md-12 col-sm-12"> <input type="button" onclick="Validate()" style="margin-top:31px;" name="buttonsubmit" id="InsertCategory"   class="btn btn-primary" value="Save"></div>
+                            </div>
                         </div>
-                    </div>
                     }
                 </div>
             </div>
@@ -66,7 +71,7 @@
                     Topic Url
                 </th>
                 <th style="width: 15%">
-                   Category
+                    Category
                 </th>
 
                 <th style="width: 20%">
@@ -77,28 +82,49 @@
         <tbody>
             @foreach (var item in Model.GetTopics)
             {
-            <tr>
-                <td>
-                    @item.categoryid
-                </td>
-                <td>
-                    @item.title
-                </td>
-                <td>
-                    @item.topicurl
-                </td>
-                <td>
-                    @item.Category
-                </td>
-                <td class="project-actions text-right">
-                    <a class="btn btn-danger btn-sm" href='@Url.Action("DeleteTopic", "Category", new { id = item.topicid })'>
-                        <i class="fas fa-trash">
-                        </i>
-                        Delete
-                    </a>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @item.categoryid
+                    </td>
+                    <td>
+                        @item.title
+                    </td>
+                    <td>
+                        @item.topicurl
+                    </td>
+                    <td>
+                        @item.Category
+                    </td>
+                    <td class="project-actions text-right">
+                        <a class="btn btn-danger btn-sm" href="@Url.Action("DeleteTopic", "Category", new { id = item.topicid })" onclick="return confirm('Are you sure you want to Delete this topic?')">
+                            <i class="fas fa-trash">
+                            </i>
+                            Delete
+                        </a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
 </div>
+<script>
+    var Validate = function () {
+        if ($("#TopicDetail_categoryid").val().trim() == "") {
+            alert("Please insert category id ");
+            return false;
+        }
+        else if ($("#TopicDetail_title").val().trim() == "") {
+            alert("Please insert title ");
+            return false;
+        }
+        else if ($("#TopicDetail_topicurl").val().trim() == "") {
+            alert("Please insert topic url");
+            return false;
+        }
+        else {
+            $('form').submit();
+        }
+    }
+
+
+</script>
