--- a/Views/Shared/_MainSlider.cshtml
+++ b/Views/Shared/_MainSlider.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "_MainSlider";
   
 }
-
+<head>
+    <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 <div class="banner" id="banner">
 
     <!-- slideshow start -->
