--- a/Views/Shared/_SuccessfulRegistration.cshtml
+++ b/Views/Shared/_SuccessfulRegistration.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="main " data-animation-effect="fadeInDownSmall" data-effect-delay="300">
+﻿<head>
+    <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<div class="main " data-animation-effect="fadeInDownSmall" data-effect-delay="300">
     <div class="form-block center-block">
         <h2 class="title">Notification</h2>
         <hr>
