--- a/Views/Shared/_Tags.cshtml
+++ b/Views/Shared/_Tags.cshtml
@@ -1,4 +1,8 @@
-﻿@model Code2Night.DAL.Common.MyBlogs
+﻿
+@model Code2Night.DAL.Common.MyBlogs
+    <head>
+        <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    </head>
 <div class="tags-cloud">
     @if (Model.Tags != null)
     {
