--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -6,6 +6,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <meta name="viewport" content="width=device-width" />
     <title>Error</title>
 </head>
@@ -14,7 +17,6 @@
 
         <!-- header-top start (Add "dark" class to .header-top in order to enable dark header-top e.g <div class="header-top dark">) -->
         <!-- ================ -->
-        
         <!-- page-intro start-->
         <!-- ================ -->
         <div class="page-intro">
@@ -43,7 +45,7 @@
                         <h1 class="title">Ooops! Page Not Found - 404</h1>
                         <br>
                         <p>The requested URL was not found on this server. Make sure that the Web site address displayed in the address bar of your browser is spelled and formatted correctly or <a href="@Url.Action("index","Blog")">return to Home page.</a></p>
-                        
+
                     </div>
                     <!-- main end -->
 
