--- a/Views/Tutorials/Index.cshtml
+++ b/Views/Tutorials/Index.cshtml
@@ -41,7 +41,7 @@
                                         <img src="Content/images/portfolio-1.jpg" alt="">
                                         <div class="overlay">
                                             <div class="overlay-links">
-                                                <a href="portfolio-item.html"><i class="fa fa-link"></i></a>
+                                                <a href='@Url.Action("Article", "Tutorials",new { id = item.topicurl })'><i class="fa fa-link"></i></a>
                                             </div>
                                         </div>
                                     </div>
