--- a/Views/Category/Articles.cshtml
+++ b/Views/Category/Articles.cshtml
@@ -48,6 +48,7 @@
                             <div class="col-md-12">
                                 <label for="categoryid" class="col-sm-6 control-label">Article Body<span class="text-danger small">*</span></label>
                                 @Html.TextAreaFor(x => x.ArticleDetails.ArticleBody, new { @class = "form-control", @id = "summernote" })
+                                @Html.HiddenFor(x=>x.ArticleDetails.articleid)
                             </div>
 
 
@@ -79,9 +80,7 @@
                 <th style="width: 15%">
                     Article Introduction
                 </th>
-                <th style="width: 15%">
-                    Article ArticleBody
-                </th>
+            
 
                 <th style="width: 20%">
                     Article Url
@@ -101,13 +100,16 @@
                     <td>
                         @item.topicArticleIntroduction
                     </td>
-                    <td>
-                        @item.ArticleBody
-                    </td>
+                    
                     <td>
                         @item.articleurl
                     </td>
                     <td class="project-actions text-right">
+                        <a class="btn btn-primary btn-sm" href="@Url.Action("EditArticle", "Category", new { id = item.articleid })">
+                            <i class="fas fa-pen-square">
+                            </i>
+                            Edit
+                        </a>
                         <a class="btn btn-danger btn-sm" href="@Url.Action("DeleteArticle", "Category", new { id = item.articleid })" onclick="return confirm('Are you sure you want to Delete this article?')">
                             <i class="fas fa-trash">
                             </i>
@@ -162,7 +164,6 @@
     }
 
     var Validate = function () {
-        debugger;
         if ($("#ArticleDetails_topicid").val().trim() == "") {
             alert("Please insert topic id ");
             return false;
